--- a/package.json
+++ b/package.json
@@ -31,7 +31,18 @@
     "dvi",
     "pdf"
   ],
-  "author": "Mikola Lysenko",
+  "authors": [
+    {
+      "name": "Mikola Lysenko",
+      "email": "mikolalysenko@gmail.com",
+      "url": "http://0fps.net"
+    },
+    {
+      "name": "Oliver Relph",
+      "email": "ollie@mammal.io",
+      "url": "http://mammal.io",
+    }
+  ],
   "license": "MIT",
   "readmeFilename": "README.md",
   "gitHead": "926750a26105a84f98ef1c40498218b831a3409d"
