Correct JSON error

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     {
       "name": "Oliver Relph",
       "email": "ollie@mammal.io",
-      "url": "http://mammal.io",
+      "url": "http://mammal.io"
     }
   ],
   "license": "MIT",
